Use Best Practive for api versioning and update the routes
